[package]
name = "timely_state"
version = "0.1.0"
authors = ["Matthew Brookes <mbrookes1304@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.2"
tempfile = "3"

[dependencies.rocksdb]
git = "https://github.com/matthewbrookes/rust-rocksdb"
branch = "master"

[dependencies.faster-rs]
git = "https://github.com/matthewbrookes/faster-rs"
branch="deletion-logscan"

